bin/y.output
   0  $accept : programa $end

   1  programa : ID BEGIN sentencias END

   2  sentencias : sentencias sentencia ';'
   3             | sentencia ';'

   4  sentencia : sentencia_declarativa
   5            | sentencia_ejecutable

   6  sentencia_declarativa : declaracion_variable
   7                        | declaracion_funciones
   8                        | declaracion_subtipo

   9  declaracion_variable : tipo variables

  10  tipo : INTEGER
  11       | DOUBLE

  12  variables : variables ',' ID
  13            | ID

  14  declaracion_subtipo : TYPEDEF ID ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'
  15                      | TYPEDEF TRIPLE '<' tipo '>' ID

  16  declaracion_funciones : tipo FUN ID parametros_formal BEGIN cuerpo_funcion END
  17                        | ID FUN ID parametros_formal BEGIN cuerpo_funcion END

  18  parametros_formal : parametros_formal parametro ','
  19                    | parametro

  20  parametro : tipo ID

  21  cuerpo_funcion : sentencias RET '(' expresion_arit ')'
  22                 | sentencias

  23  sentencia_ejecutable : asignacion

  24  asignacion : ID ASIGNACION expresion_arit
  25             | ID '{' CTE '}' ASIGNACION expresion_arit

  26  expresion_arit : expresion_arit '+' termino
  27                 | expresion_arit '-' termino
  28                 | termino

  29  termino : termino '*' factor
  30          | termino '/' factor
  31          | factor

  32  factor : ID
  33         | CTE_con_sig
  34         | ID '{' CTE_con_sig '}'

  35  CTE_con_sig : CTE
  36              | '-' CTE

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	.  error

	programa  goto 2


state 1
	programa : ID . BEGIN sentencias END  (1)

	BEGIN  shift 3
	.  error


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	programa : ID BEGIN . sentencias END  (1)

	TYPEDEF  shift 4
	ID  shift 5
	INTEGER  shift 6
	DOUBLE  shift 7
	.  error

	sentencias  goto 8
	sentencia  goto 9
	sentencia_declarativa  goto 10
	sentencia_ejecutable  goto 11
	declaracion_variable  goto 12
	declaracion_funciones  goto 13
	declaracion_subtipo  goto 14
	tipo  goto 15
	asignacion  goto 16


state 4
	declaracion_subtipo : TYPEDEF . ID ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (14)
	declaracion_subtipo : TYPEDEF . TRIPLE '<' tipo '>' ID  (15)

	ID  shift 17
	TRIPLE  shift 18
	.  error


state 5
	declaracion_funciones : ID . FUN ID parametros_formal BEGIN cuerpo_funcion END  (17)
	asignacion : ID . ASIGNACION expresion_arit  (24)
	asignacion : ID . '{' CTE '}' ASIGNACION expresion_arit  (25)

	FUN  shift 19
	ASIGNACION  shift 20
	'{'  shift 21
	.  error


state 6
	tipo : INTEGER .  (10)

	.  reduce 10


state 7
	tipo : DOUBLE .  (11)

	.  reduce 11


state 8
	programa : ID BEGIN sentencias . END  (1)
	sentencias : sentencias . sentencia ';'  (2)

	END  shift 22
	TYPEDEF  shift 4
	ID  shift 5
	INTEGER  shift 6
	DOUBLE  shift 7
	.  error

	sentencia  goto 23
	sentencia_declarativa  goto 10
	sentencia_ejecutable  goto 11
	declaracion_variable  goto 12
	declaracion_funciones  goto 13
	declaracion_subtipo  goto 14
	tipo  goto 15
	asignacion  goto 16


state 9
	sentencias : sentencia . ';'  (3)

	';'  shift 24
	.  error


state 10
	sentencia : sentencia_declarativa .  (4)

	.  reduce 4


state 11
	sentencia : sentencia_ejecutable .  (5)

	.  reduce 5


state 12
	sentencia_declarativa : declaracion_variable .  (6)

	.  reduce 6


state 13
	sentencia_declarativa : declaracion_funciones .  (7)

	.  reduce 7


state 14
	sentencia_declarativa : declaracion_subtipo .  (8)

	.  reduce 8


state 15
	declaracion_variable : tipo . variables  (9)
	declaracion_funciones : tipo . FUN ID parametros_formal BEGIN cuerpo_funcion END  (16)

	FUN  shift 25
	ID  shift 26
	.  error

	variables  goto 27


state 16
	sentencia_ejecutable : asignacion .  (23)

	.  reduce 23


state 17
	declaracion_subtipo : TYPEDEF ID . ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (14)

	ASIGNACION  shift 28
	.  error


state 18
	declaracion_subtipo : TYPEDEF TRIPLE . '<' tipo '>' ID  (15)

	'<'  shift 29
	.  error


state 19
	declaracion_funciones : ID FUN . ID parametros_formal BEGIN cuerpo_funcion END  (17)

	ID  shift 30
	.  error


state 20
	asignacion : ID ASIGNACION . expresion_arit  (24)

	CTE  shift 31
	ID  shift 32
	'-'  shift 33
	.  error

	CTE_con_sig  goto 34
	expresion_arit  goto 35
	termino  goto 36
	factor  goto 37


state 21
	asignacion : ID '{' . CTE '}' ASIGNACION expresion_arit  (25)

	CTE  shift 38
	.  error


state 22
	programa : ID BEGIN sentencias END .  (1)

	.  reduce 1


state 23
	sentencias : sentencias sentencia . ';'  (2)

	';'  shift 39
	.  error


state 24
	sentencias : sentencia ';' .  (3)

	.  reduce 3


state 25
	declaracion_funciones : tipo FUN . ID parametros_formal BEGIN cuerpo_funcion END  (16)

	ID  shift 40
	.  error


state 26
	variables : ID .  (13)

	.  reduce 13


state 27
	declaracion_variable : tipo variables .  (9)
	variables : variables . ',' ID  (12)

	','  shift 41
	';'  reduce 9


state 28
	declaracion_subtipo : TYPEDEF ID ASIGNACION . tipo '{' CTE_con_sig ',' CTE_con_sig '}'  (14)

	INTEGER  shift 6
	DOUBLE  shift 7
	.  error

	tipo  goto 42


state 29
	declaracion_subtipo : TYPEDEF TRIPLE '<' . tipo '>' ID  (15)

	INTEGER  shift 6
	DOUBLE  shift 7
	.  error

	tipo  goto 43


state 30
	declaracion_funciones : ID FUN ID . parametros_formal BEGIN cuerpo_funcion END  (17)

	INTEGER  shift 6
	DOUBLE  shift 7
	.  error

	tipo  goto 44
	parametros_formal  goto 45
	parametro  goto 46


state 31
	CTE_con_sig : CTE .  (35)

	.  reduce 35


state 32
	factor : ID .  (32)
	factor : ID . '{' CTE_con_sig '}'  (34)

	'{'  shift 47
	';'  reduce 32
	')'  reduce 32
	'+'  reduce 32
	'-'  reduce 32
	'*'  reduce 32
	'/'  reduce 32


state 33
	CTE_con_sig : '-' . CTE  (36)

	CTE  shift 48
	.  error


state 34
	factor : CTE_con_sig .  (33)

	.  reduce 33


state 35
	asignacion : ID ASIGNACION expresion_arit .  (24)
	expresion_arit : expresion_arit . '+' termino  (26)
	expresion_arit : expresion_arit . '-' termino  (27)

	'+'  shift 49
	'-'  shift 50
	';'  reduce 24


state 36
	expresion_arit : termino .  (28)
	termino : termino . '*' factor  (29)
	termino : termino . '/' factor  (30)

	'*'  shift 51
	'/'  shift 52
	';'  reduce 28
	')'  reduce 28
	'+'  reduce 28
	'-'  reduce 28


state 37
	termino : factor .  (31)

	.  reduce 31


state 38
	asignacion : ID '{' CTE . '}' ASIGNACION expresion_arit  (25)

	'}'  shift 53
	.  error


state 39
	sentencias : sentencias sentencia ';' .  (2)

	.  reduce 2


state 40
	declaracion_funciones : tipo FUN ID . parametros_formal BEGIN cuerpo_funcion END  (16)

	INTEGER  shift 6
	DOUBLE  shift 7
	.  error

	tipo  goto 44
	parametros_formal  goto 54
	parametro  goto 46


state 41
	variables : variables ',' . ID  (12)

	ID  shift 55
	.  error


state 42
	declaracion_subtipo : TYPEDEF ID ASIGNACION tipo . '{' CTE_con_sig ',' CTE_con_sig '}'  (14)

	'{'  shift 56
	.  error


state 43
	declaracion_subtipo : TYPEDEF TRIPLE '<' tipo . '>' ID  (15)

	'>'  shift 57
	.  error


state 44
	parametro : tipo . ID  (20)

	ID  shift 58
	.  error


state 45
	declaracion_funciones : ID FUN ID parametros_formal . BEGIN cuerpo_funcion END  (17)
	parametros_formal : parametros_formal . parametro ','  (18)

	BEGIN  shift 59
	INTEGER  shift 6
	DOUBLE  shift 7
	.  error

	tipo  goto 44
	parametro  goto 60


state 46
	parametros_formal : parametro .  (19)

	.  reduce 19


state 47
	factor : ID '{' . CTE_con_sig '}'  (34)

	CTE  shift 31
	'-'  shift 33
	.  error

	CTE_con_sig  goto 61


state 48
	CTE_con_sig : '-' CTE .  (36)

	.  reduce 36


state 49
	expresion_arit : expresion_arit '+' . termino  (26)

	CTE  shift 31
	ID  shift 32
	'-'  shift 33
	.  error

	CTE_con_sig  goto 34
	termino  goto 62
	factor  goto 37


state 50
	expresion_arit : expresion_arit '-' . termino  (27)

	CTE  shift 31
	ID  shift 32
	'-'  shift 33
	.  error

	CTE_con_sig  goto 34
	termino  goto 63
	factor  goto 37


state 51
	termino : termino '*' . factor  (29)

	CTE  shift 31
	ID  shift 32
	'-'  shift 33
	.  error

	CTE_con_sig  goto 34
	factor  goto 64


state 52
	termino : termino '/' . factor  (30)

	CTE  shift 31
	ID  shift 32
	'-'  shift 33
	.  error

	CTE_con_sig  goto 34
	factor  goto 65


state 53
	asignacion : ID '{' CTE '}' . ASIGNACION expresion_arit  (25)

	ASIGNACION  shift 66
	.  error


state 54
	declaracion_funciones : tipo FUN ID parametros_formal . BEGIN cuerpo_funcion END  (16)
	parametros_formal : parametros_formal . parametro ','  (18)

	BEGIN  shift 67
	INTEGER  shift 6
	DOUBLE  shift 7
	.  error

	tipo  goto 44
	parametro  goto 60


state 55
	variables : variables ',' ID .  (12)

	.  reduce 12


state 56
	declaracion_subtipo : TYPEDEF ID ASIGNACION tipo '{' . CTE_con_sig ',' CTE_con_sig '}'  (14)

	CTE  shift 31
	'-'  shift 33
	.  error

	CTE_con_sig  goto 68


state 57
	declaracion_subtipo : TYPEDEF TRIPLE '<' tipo '>' . ID  (15)

	ID  shift 69
	.  error


state 58
	parametro : tipo ID .  (20)

	.  reduce 20


state 59
	declaracion_funciones : ID FUN ID parametros_formal BEGIN . cuerpo_funcion END  (17)

	TYPEDEF  shift 4
	ID  shift 5
	INTEGER  shift 6
	DOUBLE  shift 7
	.  error

	sentencias  goto 70
	sentencia  goto 9
	sentencia_declarativa  goto 10
	sentencia_ejecutable  goto 11
	declaracion_variable  goto 12
	declaracion_funciones  goto 13
	declaracion_subtipo  goto 14
	tipo  goto 15
	cuerpo_funcion  goto 71
	asignacion  goto 16


state 60
	parametros_formal : parametros_formal parametro . ','  (18)

	','  shift 72
	.  error


state 61
	factor : ID '{' CTE_con_sig . '}'  (34)

	'}'  shift 73
	.  error


state 62
	expresion_arit : expresion_arit '+' termino .  (26)
	termino : termino . '*' factor  (29)
	termino : termino . '/' factor  (30)

	'*'  shift 51
	'/'  shift 52
	';'  reduce 26
	')'  reduce 26
	'+'  reduce 26
	'-'  reduce 26


state 63
	expresion_arit : expresion_arit '-' termino .  (27)
	termino : termino . '*' factor  (29)
	termino : termino . '/' factor  (30)

	'*'  shift 51
	'/'  shift 52
	';'  reduce 27
	')'  reduce 27
	'+'  reduce 27
	'-'  reduce 27


state 64
	termino : termino '*' factor .  (29)

	.  reduce 29


state 65
	termino : termino '/' factor .  (30)

	.  reduce 30


state 66
	asignacion : ID '{' CTE '}' ASIGNACION . expresion_arit  (25)

	CTE  shift 31
	ID  shift 32
	'-'  shift 33
	.  error

	CTE_con_sig  goto 34
	expresion_arit  goto 74
	termino  goto 36
	factor  goto 37


state 67
	declaracion_funciones : tipo FUN ID parametros_formal BEGIN . cuerpo_funcion END  (16)

	TYPEDEF  shift 4
	ID  shift 5
	INTEGER  shift 6
	DOUBLE  shift 7
	.  error

	sentencias  goto 70
	sentencia  goto 9
	sentencia_declarativa  goto 10
	sentencia_ejecutable  goto 11
	declaracion_variable  goto 12
	declaracion_funciones  goto 13
	declaracion_subtipo  goto 14
	tipo  goto 15
	cuerpo_funcion  goto 75
	asignacion  goto 16


state 68
	declaracion_subtipo : TYPEDEF ID ASIGNACION tipo '{' CTE_con_sig . ',' CTE_con_sig '}'  (14)

	','  shift 76
	.  error


state 69
	declaracion_subtipo : TYPEDEF TRIPLE '<' tipo '>' ID .  (15)

	.  reduce 15


state 70
	sentencias : sentencias . sentencia ';'  (2)
	cuerpo_funcion : sentencias . RET '(' expresion_arit ')'  (21)
	cuerpo_funcion : sentencias .  (22)

	TYPEDEF  shift 4
	RET  shift 77
	ID  shift 5
	INTEGER  shift 6
	DOUBLE  shift 7
	END  reduce 22

	sentencia  goto 23
	sentencia_declarativa  goto 10
	sentencia_ejecutable  goto 11
	declaracion_variable  goto 12
	declaracion_funciones  goto 13
	declaracion_subtipo  goto 14
	tipo  goto 15
	asignacion  goto 16


state 71
	declaracion_funciones : ID FUN ID parametros_formal BEGIN cuerpo_funcion . END  (17)

	END  shift 78
	.  error


state 72
	parametros_formal : parametros_formal parametro ',' .  (18)

	.  reduce 18


state 73
	factor : ID '{' CTE_con_sig '}' .  (34)

	.  reduce 34


state 74
	asignacion : ID '{' CTE '}' ASIGNACION expresion_arit .  (25)
	expresion_arit : expresion_arit . '+' termino  (26)
	expresion_arit : expresion_arit . '-' termino  (27)

	'+'  shift 49
	'-'  shift 50
	';'  reduce 25


state 75
	declaracion_funciones : tipo FUN ID parametros_formal BEGIN cuerpo_funcion . END  (16)

	END  shift 79
	.  error


state 76
	declaracion_subtipo : TYPEDEF ID ASIGNACION tipo '{' CTE_con_sig ',' . CTE_con_sig '}'  (14)

	CTE  shift 31
	'-'  shift 33
	.  error

	CTE_con_sig  goto 80


state 77
	cuerpo_funcion : sentencias RET . '(' expresion_arit ')'  (21)

	'('  shift 81
	.  error


state 78
	declaracion_funciones : ID FUN ID parametros_formal BEGIN cuerpo_funcion END .  (17)

	.  reduce 17


state 79
	declaracion_funciones : tipo FUN ID parametros_formal BEGIN cuerpo_funcion END .  (16)

	.  reduce 16


state 80
	declaracion_subtipo : TYPEDEF ID ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig . '}'  (14)

	'}'  shift 82
	.  error


state 81
	cuerpo_funcion : sentencias RET '(' . expresion_arit ')'  (21)

	CTE  shift 31
	ID  shift 32
	'-'  shift 33
	.  error

	CTE_con_sig  goto 34
	expresion_arit  goto 83
	termino  goto 36
	factor  goto 37


state 82
	declaracion_subtipo : TYPEDEF ID ASIGNACION tipo '{' CTE_con_sig ',' CTE_con_sig '}' .  (14)

	.  reduce 14


state 83
	cuerpo_funcion : sentencias RET '(' expresion_arit . ')'  (21)
	expresion_arit : expresion_arit . '+' termino  (26)
	expresion_arit : expresion_arit . '-' termino  (27)

	')'  shift 84
	'+'  shift 49
	'-'  shift 50
	.  error


state 84
	cuerpo_funcion : sentencias RET '(' expresion_arit ')' .  (21)

	.  reduce 21


37 terminals, 19 nonterminals
37 grammar rules, 85 states
